# bifrost

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  DEPLOY.md  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  sst-env.d.ts  sst.config.ts
.github/workflows/: ci.yml
apps/bifrost-android/: settings.gradle.kts
apps/bifrost-android/app/: build.gradle.kts  proguard-rules.pro
apps/bifrost-windows/: .gitignore  README.md  go.mod  go.sum  main.go  main_other.go  project.json  versioninfo.json  winres.go
apps/bifrost-windows/internal/api/: client.go  client_test.go
apps/bifrost-windows/internal/app/: controller.go
apps/bifrost-windows/internal/auth/: cognito.go  credstore.go  credstore_other.go
apps/bifrost-windows/internal/config/: constants.go  store.go  store_test.go  types.go  types_test.go
apps/bifrost-windows/internal/tray/: icon.go  icon_test.go  tray.go
apps/bifrost-windows/internal/tunnel/: elevate_windows.go  manager_other.go  manager_windows.go  stats_windows.go
apps/dashboard/: angular.json  package-lock.json  package.json  project.json
apps/dashboard/src/: index.html  styles.scss
apps/openwrt-client/: .gitignore  Makefile  README.md  build-ipk.sh  project.json
apps/spark/: .gitignore  Cargo.toml  Dockerfile  README.md  bifrost-spark.example.toml  entrypoint.sh  project.json
apps/spark-agent/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json  project.json
apps/spark-agent/src/: adoption.ts  aws-client.ts  config-applier.ts  config-listener.ts  config.ts  heartbeat.ts  index.ts  unifi-bridge.ts
apps/spark-lambda/: package-lock.json  package.json  project.json
apps/spark-lambda/src/: index.ts
apps/spark-server/: .gitignore  Cargo.toml  Dockerfile  bifrost-control.example.toml
apps/spark-server/migrations/: 0001_init.sql  0002_local_auth.sql  0003_node_paused.sql  0004_device_pairing.sql  0005_node_unifi.sql  0006_node_unifi_api_key.sql  0007_node_endpoint_override.sql  0008_node_commands.sql  0009_node_spark_version.sql  0010_node_backup_available.sql  0011_device_update.sql  0012_device_safe_mode.sql
apps/spark-server/src/: auth.rs  config.rs  crypto.rs  db.rs  domain.rs  error.rs  main.rs  net.rs  release.rs  state.rs  tests.rs  util.rs  wg.rs
apps/spark-server/src/auth/: extract.rs  jwt.rs  mod.rs  node_key.rs  password.rs
apps/spark-server/src/repo/: audit_repo.rs  config_repo.rs  conn_log_repo.rs  device_code_repo.rs  device_repo.rs  ip_pool_repo.rs  mod.rs  node_repo.rs  peer_repo.rs  share_repo.rs  system_config_repo.rs  user_repo.rs
apps/spark-server/src/routes/: admin.rs  agent.rs  auth.rs  config.rs  devices.rs  feed.rs  health.rs  mod.rs  node.rs  nodes.rs  pairing.rs  peers.rs  provision.rs  selfupdate.rs  shared.rs  topology.rs  users.rs
apps/spark/src/: config.rs  control.rs  main.rs  unifi.rs  update.rs
apps/updater/: Dockerfile  updater.sh
deploy/: docker-compose.yml
infra/: api.ts  auth.ts  database.ts  scheduler.ts  websocket.ts
libs/dynamo-repo/: package.json  project.json
libs/dynamo-repo/src/: audit-repo.ts  client.ts  config-repo.ts  device-repo.ts  index.ts  ip-pool-repo.ts  node-repo.ts  peer-repo.ts  system-config-repo.ts  ws-connection-repo.ts
libs/dynamo-schema/: package.json  project.json
libs/dynamo-schema/src/: entities.ts  index.ts  keys.ts  mappers.ts
libs/spark-client/: package.json  project.json
libs/spark-client/src/: failover-fetch.ts  index.ts  node-selector.ts  spark-client.ts  sse-client.ts  types.ts
libs/unifi-connect/: package-lock.json  package.json  project.json  vitest.config.ts
libs/unifi-connect/src/: auth.ts  client.ts  config-gen.ts  errors.ts  index.ts  utils.ts
scripts/: build-feed.sh  create-superadmin.mjs  install-spark.sh  set-version.sh
(+124 files in other folders)
