[package]
name = "spark-server"
version = "0.1.0"
edition = "2021"
description = "Bifrost self-hosted control plane (replaces the AWS serverless backend)"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
ulid = "1"
