[package]
name = "spark-server"
version = "0.9.11"
edition = "2021"
description = "Bifrost self-hosted control plane (replaces the AWS serverless backend)"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
ulid = "1"
# Check GitHub Releases for the latest published version, so the dashboard can offer
# spark updates independently of the control plane's own build.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Local auth (replaces AWS Cognito): password hashing + JWT issuance/verification
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
# WireGuard device provisioning: x25519 keypairs + md5 IP hashing + base64
x25519-dalek = { version = "2", features = ["static_secrets"] }
md-5 = "0.10"
base64 = "0.22"
chacha20poly1305 = "0.10"
