[package]
name = "bifrost-spark"
version = "0.9.19"
edition = "2021"
description = "Bifrost spark — on-site bridge that provisions the WireGuard server on a UniFi controller to match the Bifrost control plane."

[[bin]]
name = "bifrost-spark"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
# Derive the WireGuard server's public key from its private key when the controller
# returns the private key but leaves the public-key field empty. Same crates and
# versions the control plane's wg.rs uses, for one WireGuard keying story across apps.
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
rand = "0.8"
# Verify the SHA256 of a downloaded self-update binary before swapping it in.
sha2 = "0.10"
